remove unused fe
