# Backend/server.js
@@ -67,6 +67,7 @@ const brandRoutes = require("./interfaces/routes/brandRoute");
 const promotionRoutes = require("./interfaces/routes/promotionRoute");
 const variantRoutes = require("./interfaces/routes/variantRoute");
 const orderRoutes = require("./interfaces/routes/orderRoute");
+const couponRoutes = require("./interfaces/routes/couponRoute");
 
 app.use("/api/auth", authRoutes);
 app.use("/api/users", userRoutes);
@@ -79,6 +80,7 @@ app.use("/api/brands", brandRoutes);
 app.use("/api/promotions", promotionRoutes);
 app.use("/api/variants", variantRoutes);
 app.use("/api/orders", orderRoutes);
+app.use("/api/coupons", couponRoutes);
 
 app.use((err, req, res, next) => {
   console.error("Error caught by global error handler:", err);
